community.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: community-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: community
    spec:
      containers:
        - image: "twotwo22/community"
          name: community
          ports:
            - containerPort: 8081
  selector:
    matchLabels:
      app: user
---
apiVersion: v1
kind: Service
metadata:
  name: community-service
spec:
  ports:
     -  port: 8081
        targetPort: 8081
  selector:
    app: community
