github.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: github
    spec:
      containers:
        - image: "twotwo22/github:latest"
          imagePullPolicy: Always
          name: github
          ports:
            - containerPort: 8082
  selector:
    matchLabels:
      app: github
---
apiVersion: v1
kind: Service
metadata:
  name: github-service
spec:
  ports:
    -  port: 8082
       targetPort: 8082
  selector:
    app: github
