news.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: news
    spec:
      containers:
        - image: "twotwo22/news:latest"
          imagePullPolicy: Always
          name: news
          ports:
            - containerPort: 8080
  selector:
    matchLabels:
      app: news
---
apiVersion: v1
kind: Service
metadata:
  name: news-service
spec:
  ports:
    -  port: 8083
       targetPort: 8080
  selector:
    app: news
