ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twotwo-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "abc.sample.com"
    http:
      paths:
      - pathType: Prefix
        path: "/user"
        backend:
          service:
            name: user-service
            port:
              number: 8080
      - pathType: Prefix
        path: "/community"
        backend:
          service:
            name: community-service
            port: 
              number: 8081
